--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
     </head>
     <body>
         <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-            <p><a href="#" class="topcoat-button" id="scan">SCAN</a></p>
-            <p><a href="#" class="topcoat-button" id="encode">ENCODE</a></p>
+            <h1><a href="#" class="topcoat-button" id="scan">SCAN</a></h1>
+            <hr>
+            <h1><a href="#" class="topcoat-button" id="encode">ENCODE</h1>
+            <hr>
             <p id="info"></p>
             <h2>OPENING LINKS:</h2>
             <p><a href="#" class="topcoat-button" onclick="window.open('http://www.nhl.com', '_blank', 'location=yes');">InAppBrowser</a></p>
